--- a/sofa-config.cmake.in
+++ b/sofa-config.cmake.in
@@ -6,25 +6,25 @@ endif ()
 
 # Tell the user project where to find our headers and libraries
 
-set (CSpice_VERSION "@CSpice_VERSION@")
+set (Sofa_VERSION "@Sofa_VERSION@")
 
-set (CSpice_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/@RELATIVE_CSpice_INCLUDE_DIRS@")
+set (Sofa_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/@RELATIVE_Sofa_INCLUDE_DIRS@")
 
-set (CSpice_LIBRARY_DIRS "${CMAKE_CURRENT_LIST_DIR}/@RELATIVE_CSpice_LIB_DIR@")
+set (Sofa_LIBRARY_DIRS "${CMAKE_CURRENT_LIST_DIR}/@RELATIVE_Sofa_LIB_DIR@")
 
-set (CSpice_DATA_DIRS "${CMAKE_CURRENT_LIST_DIR}/@RELATIVE_CSpice_DATA_DIR@")
+set (Sofa_DATA_DIRS "${CMAKE_CURRENT_LIST_DIR}/@RELATIVE_Sofa_DATA_DIR@")
 
-# Allows loading CSpice settings from another project
-set (CSpice_CONFIG_FILE "${CMAKE_CURRENT_LIST_FILE}")
+# Allows loading Sofa settings from another project
+set (Sofa_CONFIG_FILE "${CMAKE_CURRENT_LIST_FILE}")
 
 # List of compilation flags -DTOTO to export
-set (CSpice_DEFINITIONS "@CSpice_DEFINITIONS@")
+set (Sofa_DEFINITIONS "@Sofa_DEFINITIONS@")
 
 # Our library dependencies (contains definitions for IMPORTED targets)
-include ("${CMAKE_CURRENT_LIST_DIR}/cspice_export.cmake")
+include ("${CMAKE_CURRENT_LIST_DIR}/Sofa_export.cmake")
 
 # These are IMPORTED targets created by NLOPTLibraryDepends.cmake
-set (CSpice_LIBRARIES "@CSpice_LIBRARIES@")
+set (Sofa_LIBRARIES "@Sofa_LIBRARIES@")
 
 if (CMAKE_VERSION VERSION_LESS 2.8.3)
   set (CMAKE_CURRENT_LIST_DIR)
