feat(tudat_bundle) added compatibility for tudat_bundle compilation.

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,11 @@ Tudat/External/SpiceInterface/Kernels/KernelMerge/
 *.autosave
 *.~?~
 *.save
+
+# Common build output folders
+cmake-build-debug/
+cmake-build-release/
+build/
+.build/
+cmake_build-debug/
+cmake_build-release/
