--- a/sofa-config.cmake.in
+++ b/sofa-config.cmake.in
@@ -8,11 +8,9 @@ endif ()
 
 set (Sofa_VERSION "@Sofa_VERSION@")
 
-set (Sofa_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/@RELATIVE_Sofa_INCLUDE_DIRS@")
-
-set (Sofa_LIBRARY_DIRS "${CMAKE_CURRENT_LIST_DIR}/@RELATIVE_Sofa_LIB_DIR@")
-
-set (Sofa_DATA_DIRS "${CMAKE_CURRENT_LIST_DIR}/@RELATIVE_Sofa_DATA_DIR@")
+set (Sofa_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/@RELATIVE_INSTALL_INCLUDE_DIR@")
+set (Sofa_LIBRARY_DIRS "${CMAKE_CURRENT_LIST_DIR}/@RELATIVE_INSTALL_LIB_DIR@")
+set (Sofa_DATA_DIRS "${CMAKE_CURRENT_LIST_DIR}/@RELATIVE_INSTALL_DATA_DIR@")
 
 # Allows loading Sofa settings from another project
 set (Sofa_CONFIG_FILE "${CMAKE_CURRENT_LIST_FILE}")
@@ -21,12 +19,12 @@ set (Sofa_CONFIG_FILE "${CMAKE_CURRENT_LIST_FILE}")
 set (Sofa_DEFINITIONS "@Sofa_DEFINITIONS@")
 
 # Our library dependencies (contains definitions for IMPORTED targets)
-include ("${CMAKE_CURRENT_LIST_DIR}/Sofa_export.cmake")
+# include ("${CMAKE_CURRENT_LIST_DIR}/sofa_export.cmake")
 
 # These are IMPORTED targets created by NLOPTLibraryDepends.cmake
 set (Sofa_LIBRARIES "@Sofa_LIBRARIES@")
 
 if (CMAKE_VERSION VERSION_LESS 2.8.3)
-  set (CMAKE_CURRENT_LIST_DIR)
+  unset (CMAKE_CURRENT_LIST_DIR)
 endif ()
 
