--- a/tools/conda.build/meta.yaml
+++ b/tools/conda.build/meta.yaml
@@ -14,6 +14,18 @@ requirements:
         - {{ compiler('c') }}              # [not win]
         - vs2017_{{ target_platform  }}    # [win]
 
+outputs:
+  - name: "{{ name }}"
+    files:
+      - lib/libsofa*{{ SHLIB_EXT }}   # [not win]
+      - lib/libsofa.so.*              # [linux]
+      - lib/libsofa.*.dylib           # [osx]
+      - Library/bin/sofa.dll          # [win]
+      - include/sofa            # [not win]
+      - lib/cmake/sofa          # [not win]
+      - Library/include/sofa    # [win]
+      - Library/lib/sofa.lib    # [win]
+      - Library/lib/cmake/sofa  # [win]
 
 about:
   home: https://github.com/ggarrett13/sofa
