--- a/tools/conda.build/meta.yaml
+++ b/tools/conda.build/meta.yaml
@@ -1,6 +1,9 @@
 {% set name = "sofa" %}
 {% set version = "1.0.0" %}
 
+#git_rev: v0.6.7
+#git_url: https://github.com/pallets/click.git
+
 package:
   name: "{{ name }}"
   version: "{{ version }}"
