--- a/sofa-config.cmake.in
+++ b/sofa-config.cmake.in
@@ -19,7 +19,7 @@ set (Sofa_CONFIG_FILE "${CMAKE_CURRENT_LIST_FILE}")
 set (Sofa_DEFINITIONS "@Sofa_DEFINITIONS@")
 
 # Our library dependencies (contains definitions for IMPORTED targets)
-# include ("${CMAKE_CURRENT_LIST_DIR}/sofa_export.cmake")
+include ("${CMAKE_CURRENT_LIST_DIR}/sofa_export.cmake")
 
 # These are IMPORTED targets created by NLOPTLibraryDepends.cmake
 set (Sofa_LIBRARIES "@Sofa_LIBRARIES@")
