feat(CircleCI): Added CircleCI to tudat-sofa dependency of tudat.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
               shell: powershell.exe
               command: |
                 mkdir library_prefix
-                $LIBRARY_PREFIX = $(pwd)/library_prefix
+                $LIBRARY_PREFIX = $(pwd)\library_prefix
                 mkdir build
                 cd build
                 cmake ^
