--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,11 @@ jobs:
           - run:
               name: Build and test
               shell: powershell.exe
+              # https://discuss.circleci.com/t/windows-build-with-cmake/34652
               command: |
+                $ProgressPreference = "SilentlyContinue"
+                Invoke-WebRequest -URI https://github.com/Kitware/CMake/releases/download/v3.16.4/cmake-3.16.4-win64-x64.zip -OutFile $Env:HOMEPATH\cmake-3.16.4-win64-x64.zip
+                Expand-Archive $Env:HOMEPATH\cmake-3.16.4-win64-x64.zip -DestinationPath $Env:HOMEPATH
                 mkdir install_test
                 $LIBRARY_PREFIX = "$(pwd)/install_test"
                 mkdir build
