--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
               command: |
                 $ProgressPreference = "SilentlyContinue"
                 Invoke-WebRequest -URI https://github.com/Kitware/CMake/releases/download/v3.16.4/cmake-3.16.4-win64-x64.zip -OutFile $Env:HOMEPATH\cmake-3.16.4-win64-x64.zip
-                Expand-Archive $Env:HOMEPATH\cmake-3.16.4-win64-x64.zip -DestinationPath $Env:HOMEPATH
+                Expand-Archive $Env:HOMEPATH\cmake-3.16.4-win64-x64.zip -DestinationPath "$Env:ProgramFiles"
                 Rename-Item "$Env:ProgramFiles\cmake-3.16.4-win64-x64" -NewName CMake
                 mkdir install_test
                 $LIBRARY_PREFIX = "$(pwd)/install_test"
