--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,10 @@ executors:
   linux-bionic:
     docker:
       - image: circleci/buildpack-deps:bionic
+      
+  linux-continuumio:
+    docker:
+      - image: continuumio/miniconda3
 
   win-64:
     win/default
@@ -134,4 +138,4 @@ workflows:
       - build-and-test:
           matrix:
             parameters:
-              os: [linux-bionic, win-64]
+              os: [linux-bionic, win-64, linux-continuumio]
