--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,10 +96,14 @@ variables:
         # see the comment above where the version is calculated, to understand why both master
         # and dev are being pushed.
         if [ "${CIRCLE_BRANCH}" == "master" ]; then
-          anaconda upload -t "${ANACONDA_API_TOKEN}" "${CONDA_ARTIFACT}"
+          anaconda upload -t "${CONDA_ARTIFACT}"
+          # Causing an issue currently, will be fixed.
+          # anaconda upload -t "${ANACONDA_API_TOKEN}" "${CONDA_ARTIFACT}"
           echo "CONDA_ARTIFACT: ${CONDA_ARTIFACT}"
         elif [ "${CIRCLE_BRANCH}" == "develop" ]; then
-          anaconda upload -l "dev" -t "${ANACONDA_API_TOKEN}" -v "${NEW_GIT_TAG}" "${CONDA_ARTIFACT}"
+          # Causing an issue currently, will be fixed.
+          # anaconda upload -l "dev" -t "${ANACONDA_API_TOKEN}" -v "${NEW_GIT_TAG}" "${CONDA_ARTIFACT}"
+          anaconda upload -l "dev" -v "${NEW_GIT_TAG}" "${CONDA_ARTIFACT}"
           echo "NEW_GIT_TAG: ${NEW_GIT_TAG}"
           echo "CONDA_ARTIFACT: ${CONDA_ARTIFACT}"
         fi
