--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,6 @@ variables:
         # Core deps.
         # sudo apt-get install build-essential cmake
 
-
   initialise-conda: &initialise-conda
     run:
       name: Initiate and setup conda env
@@ -50,6 +49,52 @@ variables:
         conda install anaconda-client -y
         conda install conda-verify -y
         conda config --add channels ggarrett13
+        echo "export ANACONDA_ROOT_CHANNEL=ggarrett13" >> $BASH_ENV ; source $BASH_ENV
+
+  lib_version: &lib_version
+    run:
+      name: Version info
+      command: |
+        version=$(cat version)
+        # We update the version number on the dev branch. This ensures that master never gets ahead of dev
+        # In order to control this, when we push to anaconda, we use the label 'dev' for the dev branch
+        # and no label for the master branch. Thus when installing, a user will only get the dev versions
+        # if they explictly ask for that label.
+        if [ "${CIRCLE_BRANCH}" != "master" ]; then
+          if [ "${CIRCLE_BRANCH}" == "develop" ]; then
+            version=$(cat version | perl -pe 's/^((\d+\.)*)(\d+)(.*)$/$1.($3+1).$4/e')
+          else
+            # add the branch name, but remove any dashes to make it fit with PEP-440
+            version="${version}+${CIRCLE_BRANCH//-/}"
+          fi
+          version="${version//\//}"  # also remove slashes!
+          printf ${version} > version
+        fi
+        # set up environment variables
+        printf 'export VERSION=%s\n' "${version}" >> $BASH_ENV
+        if [ "${CIRCLE_BRANCH}" == "develop" ]; then
+          printf 'export NEW_GIT_TAG=%s+dev\n' "${version}" >> $BASH_ENV
+          printf 'export ANACONDA_CHANNEL=${ANACONDA_ROOT_CHANNEL}/label/dev\n' >> $BASH_ENV
+        else
+          printf 'export NEW_GIT_TAG=%s\n' "${version}" >> $BASH_ENV
+          printf 'export ANACONDA_CHANNEL=${ANACONDA_ROOT_CHANNEL}\n' >> $BASH_ENV
+        fi
+        # printf 'export DOCKER_IMAGE=%s/%s\n' "${CIRCLE_PROJECT_USERNAME}" "${CIRCLE_PROJECT_REPONAME}" >> $BASH_ENV
+        # make sure to switch the '+' (needed for python) to a '.' (needed for docker)
+        # printf 'export DOCKER_FLAG=${DOCKER_IMAGE}:${NEW_GIT_TAG//+/.}\n' >> $BASH_ENV
+        source $BASH_ENV
+
+  update_version: &update_version
+    run:
+      name: Update version
+      command: |
+        source $BASH_ENV
+        # update version in git to make sure that this transfers into conda env
+        git remote set-url origin https://${BITBUCKET_USER}:${BITBUCKET_PASSWORD}@bitbucket.org/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}.git
+        git config --global user.email "procansoftengrobot@cmri.com.au"
+        git config --global user.name "ProCan Soft Eng Robot"
+        git diff --quiet version || git commit version -m "[skip ci] ${IMAGE} updated to ${NEW_GIT_TAG}"
+        git tag ${NEW_GIT_TAG}
 
   build: &build
     run:
@@ -96,9 +141,9 @@ variables:
         # see the comment above where the version is calculated, to understand why both master
         # and dev are being pushed.
         if [ "${CIRCLE_BRANCH}" == "master" ]; then
-          # anaconda upload -t  "${CONDA_ARTIFACT}"
+          anaconda upload "${CONDA_ARTIFACT}"
           # Causing an issue currently, will be fixed.
-          anaconda upload -t "${ANACONDA_TOKEN}" "${CONDA_ARTIFACT}"
+          # anaconda upload -t "${ANACONDA_TOKEN}" "${CONDA_ARTIFACT}"
           echo "CONDA_ARTIFACT: ${CONDA_ARTIFACT}"
         elif [ "${CIRCLE_BRANCH}" == "develop" ]; then
           # Causing an issue currently, will be fixed.
@@ -120,6 +165,8 @@ jobs:
       - *install-miniconda3
       - *install-build-essential
       - *initialise-conda
+      - *lib_version
+      - *update_version
       - *build
       - *deploy
 
