--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,7 @@ variables:
         # if they explictly ask for that label.
         if [ "${CIRCLE_BRANCH}" != "master" ]; then
           if [ "${CIRCLE_BRANCH}" == "develop" ]; then
+            #version=$(cat version | perl -pe 's/^((\d+\.)*)(\d+)(.*)$/$1.($3+1).$4/e')
             version=$(cat version | perl -pe 's/^((\d+\.)*)(\d+)(.*)$/$1.($3+1).$4/e')
           else
             # add the branch name, but remove any dashes to make it fit with PEP-440
@@ -90,10 +91,10 @@ variables:
       command: |
         source $BASH_ENV
         # update version in git to make sure that this transfers into conda env
-        git remote set-url origin https://${BITBUCKET_USER}:${BITBUCKET_PASSWORD}@bitbucket.org/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}.git
-        git config --global user.email "procansoftengrobot@cmri.com.au"
-        git config --global user.name "ProCan Soft Eng Robot"
-        git diff --quiet version || git commit version -m "[skip ci] ${IMAGE} updated to ${NEW_GIT_TAG}"
+        git remote set-url origin https://${GITHUB_USERNAME}:${GITHUB_TOKEN}@github.com/${GITHUB_USERNAME}/${CIRCLE_PROJECT_REPONAME}.git
+        git config --global user.email "${GITHUB_EMAIL}"
+        git config --global user.name "${GITHUB_USERNAME}"
+        git diff --quiet version || git commit version -m "[skip ci] ${CIRCLE_PROJECT_REPONAME} updated to ${NEW_GIT_TAG}"
         git tag ${NEW_GIT_TAG}
 
   build: &build
@@ -166,7 +167,7 @@ jobs:
       - *install-build-essential
       - *initialise-conda
       - *lib_version
-      - *update_version
+#      - *update_version
       - *build
       - *deploy
 
