--- a/.conda/meta.yaml
+++ b/.conda/meta.yaml
@@ -1,9 +1,8 @@
 {% set name = "tudat-sofa" %}
-{% set version = "1.0.1" %}
 
 package:
   name: "{{ name }}"
-  version: "{{ version }}"
+  version: {{ environ.get('NEW_GIT_TAG', 'dev') }}
 
 source:
   path: ../
