--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,6 +166,13 @@ jobs:
       - *build
       - *deploy
 
+      # Test results.
+      - store_test_results:
+          path: ~/tmp/test-results
+      - store_artifacts:
+          path: ~/tmp/test-results
+
+
 workflows:
   version: 2.1
   build-test-deploy:
