bugfix(circleci) test-results -> test-reports

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -168,9 +168,9 @@ jobs:
 
       # Test results.
       - store_test_results:
-          path: ~/tmp/test-results
+          path: ~/tmp/test-reports
       - store_artifacts:
-          path: ~/tmp/test-results
+          path: ~/tmp/test-reports
 
 
 workflows:
