--- a/.conda/conda_build_config.yaml
+++ b/.conda/conda_build_config.yaml
@@ -1,13 +1,2 @@
-c_compiler: gcc
-c_compiler_version: '7'
-cxx_compiler: gxx
-cxx_compiler_version: '7'
-extend_keys:
-  - extend_keys
-  - pin_run_as_build
-  - ignore_build_only_deps
-  - ignore_version
-fortran_compiler: gfortran
-ignore_build_only_deps:
-  - numpy
-  - python
+channel_targets:
+  - ggarrett13 main
